# openvoice_package

./: README.md  pyproject.toml  requirements.txt
openvoice/: __init__.py  api.py  se_extractor.py
openvoice/text/: english.py  mandarin.py
