[tool.poetry]
name = "openvoice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
librosa = "^0.9.1"
faster-whisper = "^0.10.0"
pydub = "^0.25.1"
wavmark = "0.0.3"
numpy = "1.23.5"
eng-to-ipa = "^0.0.2"
inflect = "7.0.0"
unidecode = "^1.3.7"
whisper-timestamped = "^1.14.3"
python-dotenv = "^1.0.0"
pypinyin = "^0.50.0"
cn2an = "^0.5.22"
jieba = "0.42.1"
gradio = "^3.41.2"
langid = "^1.1.6"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
